<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1"
    tools:context=".features.panickwipe.trigger.application.ApplicationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fake Application Triggers"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_application_description"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <CheckBox
                android:id="@+id/signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/signal"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/telegram"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/threema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/threema"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/session"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>